--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -10,6 +10,8 @@ spell.heal.name=Heal
 spell.heal.description=Heals the caster
 spell.death.name=Death
 spell.death.description=Kills the target
+spell.dummyHoming.name=Dummy
+spell.dummyHoming.name=For Testing Homing Projectiles
 spell.dummy.name=Dummy
 spell.dummy.description=Does no damage. For testing.
 spell.immortalize.name=Immortalize
