fixed rapid cell regeneration. now grants total immortality.

--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -10,13 +10,13 @@ spell.heal.name=Heal
 spell.heal.description=Heals the caster
 spell.death.name=Death
 spell.death.description=Kills the target
-spell.dummyHoming.name=Dummy
-spell.dummyHoming.name=For Testing Homing Projectiles
-spell.dummy.name=Dummy
-spell.dummy.description=Does no damage. For testing.
+spell.dummyHoming.name=Dummy Homing
+spell.dummyHoming.description=Generic Homing Spell
+spell.dummy.name=Homing
+spell.dummy.description=Generic Ranged Spell
 spell.immortalize.name=Immortalize
 spell.immortalize.description=Makes the caster immortal
 spell.flames.name=Flames
-spell.flames.description=Like a flame thrower
+spell.flames.description=Like a flamethrower
 
 itemGroup.usefulThings=Powers API
