changed the way SpellEffects are stored on a player. Now similar to the way enchantments are stored on an item stack

--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -19,4 +19,4 @@ spell.immortalize.description=Makes the caster immortal
 spell.flames.name=Flames
 spell.flames.description=Like a flamethrower
 
-itemGroup.usefulThings=Powers API
+itemGroup.powersAPI=Powers API
