spell effects are activated client side as well

--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -1,28 +1,28 @@
-item.usefulthings_magicTome.name=Magic Tome
+item.usefulthings_powerActivator.name=Power Activator
 
-spell.damage.name=Damage
-spell.damage.description=Damages Enemies
-spell.incinerate.name=Incinerate
-spell.incinerate.description=Lights enemies on fire
-spell.lightning.name=Lightning
-spell.lightning.description=Strikes enemies with lightning
-spell.heal.name=Heal
-spell.heal.description=Heals the caster
-spell.death.name=Death
-spell.death.description=Kills the target
-spell.dummyHoming.name=Dummy Homing
-spell.dummyHoming.description=Generic Homing Spell
-spell.dummy.name=Dummy
-spell.dummy.description=Generic Ranged Spell
-spell.immortalize.name=Immortalize
-spell.immortalize.description=Makes the caster immortal
-spell.flames.name=Flames
-spell.flames.description=Like a flamethrower
-spell.slam.name=Slam
-spell.slam.description=Slams enemies into the ground
-spell.telekinesis.name=Telekinesis
-spell.telekinesis.description=Pulls and levitates targets
-spell.push.name=Push
-spell.push.description=Throws enemies away
+power.damage.name=Damage
+power.damage.description=Damages Enemies
+power.incinerate.name=Incinerate
+power.incinerate.description=Lights enemies on fire
+power.lightning.name=Lightning
+power.lightning.description=Strikes enemies with lightning
+power.heal.name=Heal
+power.heal.description=Heals the caster
+power.death.name=Death
+power.death.description=Kills the target
+power.dummyHoming.name=Dummy Homing
+power.dummyHoming.description=Generic Homing Power
+power.dummy.name=Dummy
+power.dummy.description=Generic Ranged Power
+power.immortalize.name=Immortalize
+power.immortalize.description=Makes the caster immortal
+power.flames.name=Flames
+power.flames.description=Like a flamethrower
+power.slam.name=Slam
+power.slam.description=Slams enemies into the ground
+power.telekinesis.name=Telekinesis
+power.telekinesis.description=Pulls and levitates targets
+power.push.name=Push
+power.push.description=Throws enemies away
 
 itemGroup.powersAPI=Powers API
