--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -1,6 +1,7 @@
 key.powersapi.powers=Powers API
 key.primary.desc=Use Primary Power
 key.secondary.desc=Use Secondary Power
+key.stateSwith.desc=Cycle Power State
 
 itemGroup.powersAPI=Powers API
 
