--- a/src/main/resources/assets/powersapi/lang/en_US.lang
+++ b/src/main/resources/assets/powersapi/lang/en_US.lang
@@ -3,6 +3,8 @@ key.primary.desc=Use Primary Power
 key.secondary.desc=Use Secondary Power
 key.stateSwith.desc=Cycle Power State
 
+powers.config=Powers API
+
 itemGroup.powersAPI=Powers API
 
 item.powersAPI_powerActivator.name=Power Activator
